tests/baselines/reference/classWithStaticFieldInParameterInitializer.2(target=es5).errors.txt
tests/cases/conformance/classes/classExpressions/classWithStaticFieldInParameterInitializer.2.ts(3,21): error TS2373: Initializer of parameter 'b' cannot reference identifier 'C' declared after it.


==== tests/cases/conformance/classes/classExpressions/classWithStaticFieldInParameterInitializer.2.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    class C {}
    ((b = class extends C { static x = 1 }) => { var C; })();
                        ~
!!! error TS2373: Initializer of parameter 'b' cannot reference identifier 'C' declared after it.